--- a/beattyFrame/utilities/TutorialCard/tutorial.storyboard
+++ b/beattyFrame/utilities/TutorialCard/tutorial.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="YBz-9b-T0a">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="YBz-9b-T0a">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -22,7 +22,6 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="RDD-Vk-mAs">
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TutsTableCell" id="srf-hu-j2I" customClass="TutsTableCell">
@@ -34,7 +33,6 @@
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fok-gW-SYk">
                                             <rect key="frame" x="20" y="11" width="560" height="21"/>
-                                            <animations/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="O6h-iP-usY"/>
                                             </constraints>
@@ -43,14 +41,12 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <animations/>
                                     <constraints>
                                         <constraint firstItem="fok-gW-SYk" firstAttribute="centerY" secondItem="IGv-TW-C5E" secondAttribute="centerY" id="Vgs-mz-OaK"/>
                                         <constraint firstItem="fok-gW-SYk" firstAttribute="leading" secondItem="IGv-TW-C5E" secondAttribute="leading" constant="20" id="emF-Ek-vmw"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="fok-gW-SYk" secondAttribute="trailing" constant="12" id="hyf-FE-Dib"/>
                                     </constraints>
                                 </tableViewCellContentView>
-                                <animations/>
                                 <connections>
                                     <outlet property="nameLabel" destination="fok-gW-SYk" id="5jR-CB-Whk"/>
                                     <segue destination="3v9-pV-kSi" kind="show" identifier="DetailSegue" trigger="accessoryAction" id="Vtc-cX-ebD"/>
@@ -81,7 +77,6 @@
                     <view key="view" contentMode="scaleToFill" id="7st-nU-l8p">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
@@ -106,10 +101,8 @@
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OYB-ey-sdy" customClass="FLAnimatedImageView">
                                         <rect key="frame" x="0.0" y="0.0" width="580" height="285"/>
-                                        <animations/>
                                     </imageView>
                                 </subviews>
-                                <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="OYB-ey-sdy" secondAttribute="trailing" id="3vE-WP-fDR"/>
@@ -123,7 +116,6 @@
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LqD-aR-oCM">
                                         <rect key="frame" x="19" y="8" width="540" height="140"/>
-                                        <animations/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="140" id="4ER-l5-OPP"/>
@@ -137,7 +129,6 @@
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJ3-FR-feY">
                                                 <rect key="frame" x="25" y="10" width="36" height="17"/>
-                                                <animations/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="36" id="9m2-56-B2k"/>
                                                     <constraint firstAttribute="height" constant="17" id="zsP-L7-1aD"/>
@@ -148,13 +139,11 @@
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Here is another tip for you" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9tI-Ow-e5U">
                                                 <rect key="frame" x="63" y="10" width="495" height="17"/>
-                                                <animations/>
                                                 <fontDescription key="fontDescription" name="GoodPro-Book" family="GoodPro" pointSize="14"/>
                                                 <color key="textColor" red="0.38823529410000002" green="0.3921568627" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <animations/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="xJ3-FR-feY" firstAttribute="top" secondItem="5mw-dx-xE0" secondAttribute="top" constant="10" id="03q-ma-6DX"/>
@@ -168,7 +157,6 @@
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 of 20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6VJ-MW-yTa">
                                         <rect key="frame" x="268" y="190" width="44" height="17"/>
-                                        <animations/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="44" id="xgI-tB-A2V"/>
                                         </constraints>
@@ -177,7 +165,6 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="LqD-aR-oCM" secondAttribute="trailing" constant="21" id="2NI-QK-8fv"/>
@@ -193,7 +180,6 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="btD-Rk-vaX" firstAttribute="centerX" secondItem="BPC-g0-KKw" secondAttribute="centerX" id="0xR-VE-Z2l"/>
@@ -209,6 +195,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
                         <outlet property="uiiv_tutorial" destination="OYB-ey-sdy" id="jeO-qf-Xfh"/>
+                        <outlet property="uil_note" destination="xJ3-FR-feY" id="I2n-An-aBV"/>
                         <outlet property="uil_numbering" destination="6VJ-MW-yTa" id="Rm3-Hx-Mkx"/>
                         <outlet property="uil_tip" destination="9tI-Ow-e5U" id="0CL-Va-zaF"/>
                         <outlet property="uitv_description" destination="LqD-aR-oCM" id="QIe-pD-1Ki"/>
@@ -225,7 +212,6 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="kRQ-bz-Pbo">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </navigationBar>
                     <connections>
                         <segue destination="Clf-CF-UAq" kind="relationship" relationship="rootViewController" id="CiY-8D-EYX"/>
