--- a/beattyFrame/utilities/TutorialCard/tutorial.storyboard
+++ b/beattyFrame/utilities/TutorialCard/tutorial.storyboard
@@ -115,7 +115,7 @@
                                 <rect key="frame" x="10" y="371" width="580" height="219"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lNC-Gr-kAk">
-                                        <rect key="frame" x="19" y="8" width="540" height="21"/>
+                                        <rect key="frame" x="19" y="8" width="499" height="21"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
@@ -170,9 +170,13 @@
                                         <color key="textColor" red="0.38823529410000002" green="0.3921568627" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sZX-oj-jpA">
+                                        <rect key="frame" x="521" y="8" width="38" height="21"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="sZX-oj-jpA" firstAttribute="leading" secondItem="lNC-Gr-kAk" secondAttribute="trailing" constant="3" id="0PJ-3i-Rca"/>
                                     <constraint firstAttribute="trailing" secondItem="LqD-aR-oCM" secondAttribute="trailing" constant="21" id="2NI-QK-8fv"/>
                                     <constraint firstAttribute="bottom" secondItem="6VJ-MW-yTa" secondAttribute="bottom" constant="12" id="2UY-Ze-eGo"/>
                                     <constraint firstItem="5mw-dx-xE0" firstAttribute="top" secondItem="LqD-aR-oCM" secondAttribute="bottom" constant="8" symbolic="YES" id="70g-nc-HwB"/>
@@ -180,12 +184,15 @@
                                     <constraint firstItem="LqD-aR-oCM" firstAttribute="top" secondItem="xkq-WQ-kXZ" secondAttribute="topMargin" constant="20" id="9JD-nr-0pe"/>
                                     <constraint firstItem="6VJ-MW-yTa" firstAttribute="centerX" secondItem="5mw-dx-xE0" secondAttribute="centerX" id="N8n-Fh-UXO"/>
                                     <constraint firstAttribute="trailing" secondItem="5mw-dx-xE0" secondAttribute="trailing" id="PdW-NS-L4P"/>
-                                    <constraint firstAttribute="trailing" secondItem="lNC-Gr-kAk" secondAttribute="trailing" constant="21" id="S5B-S7-u6X"/>
+                                    <constraint firstAttribute="trailing" secondItem="lNC-Gr-kAk" secondAttribute="trailing" constant="62" id="S5B-S7-u6X"/>
                                     <constraint firstItem="lNC-Gr-kAk" firstAttribute="top" secondItem="xkq-WQ-kXZ" secondAttribute="top" constant="8" id="VWx-ab-1DP"/>
+                                    <constraint firstItem="sZX-oj-jpA" firstAttribute="top" secondItem="xkq-WQ-kXZ" secondAttribute="top" constant="8" id="WV9-0Y-YT3"/>
+                                    <constraint firstItem="5mw-dx-xE0" firstAttribute="top" secondItem="sZX-oj-jpA" secondAttribute="bottom" constant="127" id="WjH-Z6-BsH"/>
                                     <constraint firstItem="LqD-aR-oCM" firstAttribute="leading" secondItem="xkq-WQ-kXZ" secondAttribute="leading" constant="19" id="dQN-HD-Xh4"/>
                                     <constraint firstItem="lNC-Gr-kAk" firstAttribute="leading" secondItem="xkq-WQ-kXZ" secondAttribute="leading" constant="19" id="giB-1a-Mx5"/>
                                     <constraint firstAttribute="bottom" secondItem="5mw-dx-xE0" secondAttribute="bottom" constant="31" id="hdM-MY-199"/>
                                     <constraint firstItem="5mw-dx-xE0" firstAttribute="leading" secondItem="xkq-WQ-kXZ" secondAttribute="leading" id="sGq-4P-1JQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="sZX-oj-jpA" secondAttribute="trailing" constant="21" id="t6l-PG-Eqx"/>
                                     <constraint firstItem="6VJ-MW-yTa" firstAttribute="top" secondItem="5mw-dx-xE0" secondAttribute="bottom" constant="2" id="xpD-pl-cGH"/>
                                 </constraints>
                             </view>
@@ -204,6 +211,7 @@
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
+                        <outlet property="uiiv_icon" destination="sZX-oj-jpA" id="1eq-R6-TTV"/>
                         <outlet property="uiiv_tutorial" destination="OYB-ey-sdy" id="jeO-qf-Xfh"/>
                         <outlet property="uil_Title" destination="lNC-Gr-kAk" id="0Gb-a5-b2D"/>
                         <outlet property="uil_note" destination="xJ3-FR-feY" id="I2n-An-aBV"/>
